feat(scoring): implement rubric async scoring
- Replace legacy fixed scoring fields with DB-backed RubricScoringResult

- Add input safety analysis, prompt-injection rejection, and async idempotent scoring

- Update Vue submit, result, and history pages plus project documentation

- Remove H2 runtime remnants from the development setup